<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/sign_in_signup_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:elevation="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/register_standard_spacing">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LoginNoAccount"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/sign_in_sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/register_small_spacing"
            android:text="@string/LoginRegister"
            android:textColor="@color/register_accent_color"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/sign_in_signup_container"
        android:background="@color/register_background_color"
        android:clipToPadding="false"
        android:padding="@dimen/register_screen_spacing">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/login_username_edittext"
                style="@style/MaterialEditText"
                android:hint="@string/EmailAddress"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:nextFocusForward="@+id/login_password_edittext" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/login_password_edittext"
                style="@style/MaterialEditText"
                android:layout_marginTop="@dimen/register_standard_spacing"
                android:hint="@string/Password"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/sign_in_button"
                style="@style/RegisterButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/register_screen_spacing"
                android:text="@string/LoginButtonTitle" />

            <TextView
                android:id="@+id/sign_in_forgot_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/register_standard_spacing"
                android:text="@string/LoginResetTitle"
                android:textColor="@color/register_secondary_text_color" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
